feat : fees setup for student is done
